deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-webserver
  labels:
    app: static-webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-webserver
  template:
    metadata:
      labels:
        app: static-webserver
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
