service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-webserver-service
spec:
  selector:
    app: static-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
