ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-webserver-ingress
spec:
  rules:
    - host: webserver.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-webserver-service
                port:
                  number: 80
